@startuml

abstract class CleaningTask {
  -taskId: string
  -description: string
  -status: string
  -points: int
  +CleaningTask(string taskId, string description, string status, int points, Products products)
  +getPoints() : int
  +setPoints(points: int)
  +getStatus() : string
  +setStatus(status: string)
  +AddCleaningTask(CleaningTask task)
  +RemoveCleaningTask(CleaningTask task)
}

class DailyCleaningTask extends CleaningTask {
  +tryHandIn(employee: Employee)
  +reviewHandIn() : boolean
}

class WeeklyCleaningTask extends CleaningTask {
  -week: int
  -year: int
  +tryHandIn(employee: Employee)
  +reviewHandIn() : boolean
}

class Employee {
  -employeeId: int
  -name: string
  -position: string
  -activeTasks: List<CleaningTask>
  +public Employee(int employeeid, string name, string position)
  +getActiveTasks() : List<CleaningTask>
  +AddEmployee(employee: Employee)
  +RemoveEmployee(employee: Employee)
}


class Product {
  - Id: int
  - Name: string
  - Description: Description
  - ExpireDate: date
  + Product(string name, Description description, date ExpireDate)
  + AddProduct(Product product)
  + RemoveProduct(Product product) 
  + CountProduct(Product product)
}

class Room {
  -roomNumber: int
  -beds: int
  -isSmoking: boolean
  -dailyCleaningTask: DailyCleaningTask
  -weeklyCleaningTask: WeeklyCleaningTask
  +addCleaningTask(task: CleaningTask)
}

class Hotel {
  -name: string
  -address: string
  -rooms: List<Room>
  +calculateAveragePoints() : int
}

class Guest {
  -guestId: int
  -name: string
  -address: string
  -reservation: Reservation
}

class Reservation {
  -reservationId: int
  -room: Room
  -checkInDate: date
  -checkOutDate: date
  -guest: Guest
  +Reservation(int reservationId, Room room, DateTime checkInDate, DateTime checkOutDate, Guest guest)
  +addReservation(Reservation reservation)
  +removeReservation(Reservation reservation)
}

CleaningTask <|-- DailyCleaningTask
CleaningTask <|-- WeeklyCleaningTask
Employee --> CleaningTask
Room --> DailyCleaningTask
Room --> WeeklyCleaningTask
Room --> Hotel
Reservation --> Guest
Reservation --> Room
Product --> CleaningTask

@enduml